nvml-wrapper-sys/nvml.h

    /**
 * Detailed ECC error counts for a device.
 *
 * @deprecated  Different GPU families can have different memory error counters
 *              See \ref nvmlDeviceGetMemoryErrorCounter
 */
    typedef struct nvmlEccErrorCounts_st
    {
        unsigned long long l1Cache;      //!< L1 cache errors
        unsigned long long l2Cache;      //!< L2 cache errors
        unsigned long long deviceMemory; //!< Device memory errors
        unsigned long long registerFile; //!< Register file errors
    } nvmlEccErrorCounts_t;
    /** 
 * Utilization information for a device.
 * Each sample period may be between 1 second and 1/6 second, depending on the product being queried.
 */
    typedef struct nvmlUtilization_st
    {
        unsigned int gpu;    //!< Percent of time over the past sample period during which one or more kernels was executing on the GPU
        unsigned int memory; //!< Percent of time over the past sample period during which global (device) memory was being read or written
    } nvmlUtilization_t;
    /** 
 * Memory allocation information for a device.
 */
    typedef struct nvmlMemory_st
    {
        unsigned long long total; //!< Total installed FB memory (in bytes)
        unsigned long long free;  //!< Unallocated FB memory (in bytes)
        unsigned long long used;  //!< Allocated FB memory (in bytes). Note that the driver/GPU always sets aside a small amount of memory for bookkeeping
    } nvmlMemory_t;
    /**
 * BAR1 Memory allocation Information for a device
 */
    typedef struct nvmlBAR1Memory_st
    {
        unsigned long long bar1Total; //!< Total BAR1 Memory (in bytes)
        unsigned long long bar1Free;  //!< Unallocated BAR1 Memory (in bytes)
        unsigned long long bar1Used;  //!< Allocated Used Memory (in bytes)
    } nvmlBAR1Memory_t;
    /**
 * Information about running compute processes on the GPU
 */
    typedef struct nvmlProcessInfo_st
    {
        unsigned int pid;                 //!< Process ID
        unsigned long long usedGpuMemory; //!< Amount of used GPU memory in bytes.
                                          //! Under WDDM, \ref NVML_VALUE_NOT_AVAILABLE is always reported
                                          //! because Windows KMD manages all the memory and not the NVIDIA driver
    } nvmlProcessInfo_t;
    /**
 * Enum to represent type of bridge chip
 */
    typedef enum nvmlBridgeChipType_enum
    {
        NVML_BRIDGE_CHIP_PLX = 0,
        NVML_BRIDGE_CHIP_BRO4 = 1
    } nvmlBridgeChipType_t;
    /**
 * Enum to represent the NvLink utilization counter packet units
 */
    typedef enum nvmlNvLinkUtilizationCountUnits_enum
    {
        NVML_NVLINK_COUNTER_UNIT_CYCLES = 0,   // count by cycles
        NVML_NVLINK_COUNTER_UNIT_PACKETS = 1,  // count by packets
        NVML_NVLINK_COUNTER_UNIT_BYTES = 2,    // count by bytes
        NVML_NVLINK_COUNTER_UNIT_RESERVED = 3, // count reserved for internal use
        // this must be last
        NVML_NVLINK_COUNTER_UNIT_COUNT
    } nvmlNvLinkUtilizationCountUnits_t;
    /**
 * Enum to represent the NvLink utilization counter packet types to count
 *  ** this is ONLY applicable with the units as packets or bytes
 *  ** as specified in \a nvmlNvLinkUtilizationCountUnits_t
 *  ** all packet filter descriptions are target GPU centric
 *  ** these can be "OR'd" together 
 */
    typedef enum nvmlNvLinkUtilizationCountPktTypes_enum
    {
        NVML_NVLINK_COUNTER_PKTFILTER_NOP = 0x1,         // no operation packets
        NVML_NVLINK_COUNTER_PKTFILTER_READ = 0x2,        // read packets
        NVML_NVLINK_COUNTER_PKTFILTER_WRITE = 0x4,       // write packets
        NVML_NVLINK_COUNTER_PKTFILTER_RATOM = 0x8,       // reduction atomic requests
        NVML_NVLINK_COUNTER_PKTFILTER_NRATOM = 0x10,     // non-reduction atomic requests
        NVML_NVLINK_COUNTER_PKTFILTER_FLUSH = 0x20,      // flush requests
        NVML_NVLINK_COUNTER_PKTFILTER_RESPDATA = 0x40,   // responses with data
        NVML_NVLINK_COUNTER_PKTFILTER_RESPNODATA = 0x80, // responses without data
        NVML_NVLINK_COUNTER_PKTFILTER_ALL = 0xFF         // all packets
    } nvmlNvLinkUtilizationCountPktTypes_t;
    /** 
 * Struct to define the NVLINK counter controls
 */
    typedef struct nvmlNvLinkUtilizationControl_st
    {
        nvmlNvLinkUtilizationCountUnits_t units;
        nvmlNvLinkUtilizationCountPktTypes_t pktfilter;
    } nvmlNvLinkUtilizationControl_t;