nvml-wrapper-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_nvmlEccErrorCounts_st() {
    assert_eq!(::std::mem::size_of::<nvmlEccErrorCounts_st>() , 32usize ,
               concat ! ( "Size of: " , stringify ! ( nvmlEccErrorCounts_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlEccErrorCounts_st>() , 8usize ,
                concat ! (
                "Alignment of " , stringify ! ( nvmlEccErrorCounts_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEccErrorCounts_st ) ) . l1Cache as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEccErrorCounts_st )
                , "::" , stringify ! ( l1Cache ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEccErrorCounts_st ) ) . l2Cache as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEccErrorCounts_st )
                , "::" , stringify ! ( l2Cache ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEccErrorCounts_st ) ) . deviceMemory
                as * const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEccErrorCounts_st )
                , "::" , stringify ! ( deviceMemory ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEccErrorCounts_st ) ) . registerFile
                as * const _ as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEccErrorCounts_st )
                , "::" , stringify ! ( registerFile ) ));
}
impl Clone for nvmlEccErrorCounts_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlEccErrorCounts_t = nvmlEccErrorCounts_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlUtilization_st {
    pub gpu: raw::c_uint,
    pub memory: raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlUtilization_st() {
    assert_eq!(::std::mem::size_of::<nvmlUtilization_st>() , 8usize , concat !
               ( "Size of: " , stringify ! ( nvmlUtilization_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlUtilization_st>() , 4usize , concat
                ! ( "Alignment of " , stringify ! ( nvmlUtilization_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUtilization_st ) ) . gpu as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUtilization_st ) ,
                "::" , stringify ! ( gpu ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUtilization_st ) ) . memory as *
                const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUtilization_st ) ,
                "::" , stringify ! ( memory ) ));
}
impl Clone for nvmlUtilization_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlUtilization_t = nvmlUtilization_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlMemory_st {
    pub total: raw::c_ulonglong,
    pub free: raw::c_ulonglong,
    pub used: raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_nvmlMemory_st() {
    assert_eq!(::std::mem::size_of::<nvmlMemory_st>() , 24usize , concat ! (
               "Size of: " , stringify ! ( nvmlMemory_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlMemory_st>() , 8usize , concat ! (
                "Alignment of " , stringify ! ( nvmlMemory_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlMemory_st ) ) . total as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlMemory_st ) , "::"
                , stringify ! ( total ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlMemory_st ) ) . free as * const _ as
                usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlMemory_st ) , "::"
                , stringify ! ( free ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlMemory_st ) ) . used as * const _ as
                usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlMemory_st ) , "::"
                , stringify ! ( used ) ));
}
impl Clone for nvmlMemory_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlMemory_t = nvmlMemory_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlBAR1Memory_st {
    pub bar1Total: raw::c_ulonglong,
    pub bar1Free: raw::c_ulonglong,
    pub bar1Used: raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_nvmlBAR1Memory_st() {
    assert_eq!(::std::mem::size_of::<nvmlBAR1Memory_st>() , 24usize , concat !
               ( "Size of: " , stringify ! ( nvmlBAR1Memory_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlBAR1Memory_st>() , 8usize , concat
                ! ( "Alignment of " , stringify ! ( nvmlBAR1Memory_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBAR1Memory_st ) ) . bar1Total as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlBAR1Memory_st ) ,
                "::" , stringify ! ( bar1Total ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBAR1Memory_st ) ) . bar1Free as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlBAR1Memory_st ) ,
                "::" , stringify ! ( bar1Free ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBAR1Memory_st ) ) . bar1Used as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlBAR1Memory_st ) ,
                "::" , stringify ! ( bar1Used ) ));
}
impl Clone for nvmlBAR1Memory_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlBAR1Memory_t = nvmlBAR1Memory_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlProcessInfo_st {
    pub pid: raw::c_uint,
    pub usedGpuMemory: raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_nvmlProcessInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlProcessInfo_st>() , 16usize , concat
               ! ( "Size of: " , stringify ! ( nvmlProcessInfo_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlProcessInfo_st>() , 8usize , concat
                ! ( "Alignment of " , stringify ! ( nvmlProcessInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlProcessInfo_st ) ) . pid as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlProcessInfo_st ) ,
                "::" , stringify ! ( pid ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlProcessInfo_st ) ) . usedGpuMemory as
                * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlProcessInfo_st ) ,
                "::" , stringify ! ( usedGpuMemory ) ));
}
impl Clone for nvmlProcessInfo_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlProcessInfo_t = nvmlProcessInfo_st;
pub const nvmlBridgeChipType_enum_NVML_BRIDGE_CHIP_PLX:
          nvmlBridgeChipType_enum =
    0;
pub const nvmlBridgeChipType_enum_NVML_BRIDGE_CHIP_BRO4:
          nvmlBridgeChipType_enum =
    1;
pub type nvmlBridgeChipType_enum = raw::c_uint;
pub use self::nvmlBridgeChipType_enum as nvmlBridgeChipType_t;
pub const nvmlNvLinkUtilizationCountUnits_enum_NVML_NVLINK_COUNTER_UNIT_CYCLES:
          nvmlNvLinkUtilizationCountUnits_enum =
    0;
pub const nvmlNvLinkUtilizationCountUnits_enum_NVML_NVLINK_COUNTER_UNIT_PACKETS:
          nvmlNvLinkUtilizationCountUnits_enum =
    1;
pub const nvmlNvLinkUtilizationCountUnits_enum_NVML_NVLINK_COUNTER_UNIT_BYTES:
          nvmlNvLinkUtilizationCountUnits_enum =
    2;
pub const nvmlNvLinkUtilizationCountUnits_enum_NVML_NVLINK_COUNTER_UNIT_COUNT:
          nvmlNvLinkUtilizationCountUnits_enum =
    3;
pub type nvmlNvLinkUtilizationCountUnits_enum = raw::c_uint;
pub use self::nvmlNvLinkUtilizationCountUnits_enum as
        nvmlNvLinkUtilizationCountUnits_t;
pub const nvmlNvLinkUtilizationCountPktTypes_enum_NVML_NVLINK_COUNTER_PKTFILTER_NOP:
          nvmlNvLinkUtilizationCountPktTypes_enum =
    1;
pub const nvmlNvLinkUtilizationCountPktTypes_enum_NVML_NVLINK_COUNTER_PKTFILTER_READ:
          nvmlNvLinkUtilizationCountPktTypes_enum =
    2;
pub const nvmlNvLinkUtilizationCountPktTypes_enum_NVML_NVLINK_COUNTER_PKTFILTER_WRITE:
          nvmlNvLinkUtilizationCountPktTypes_enum =
    4;
pub const nvmlNvLinkUtilizationCountPktTypes_enum_NVML_NVLINK_COUNTER_PKTFILTER_RATOM:
          nvmlNvLinkUtilizationCountPktTypes_enum =
    8;
pub const nvmlNvLinkUtilizationCountPktTypes_enum_NVML_NVLINK_COUNTER_PKTFILTER_NRATOM:
          nvmlNvLinkUtilizationCountPktTypes_enum =
    16;
pub const nvmlNvLinkUtilizationCountPktTypes_enum_NVML_NVLINK_COUNTER_PKTFILTER_FLUSH:
          nvmlNvLinkUtilizationCountPktTypes_enum =
    32;
pub const nvmlNvLinkUtilizationCountPktTypes_enum_NVML_NVLINK_COUNTER_PKTFILTER_RESPDATA:
          nvmlNvLinkUtilizationCountPktTypes_enum =
    64;
pub const nvmlNvLinkUtilizationCountPktTypes_enum_NVML_NVLINK_COUNTER_PKTFILTER_RESPNODATA:
          nvmlNvLinkUtilizationCountPktTypes_enum =
    128;
pub const nvmlNvLinkUtilizationCountPktTypes_enum_NVML_NVLINK_COUNTER_PKTFILTER_ALL:
          nvmlNvLinkUtilizationCountPktTypes_enum =
    255;
pub type nvmlNvLinkUtilizationCountPktTypes_enum = raw::c_uint;
pub use self::nvmlNvLinkUtilizationCountPktTypes_enum as
        nvmlNvLinkUtilizationCountPktTypes_t;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlNvLinkUtilizationControl_st {
    pub units: nvmlNvLinkUtilizationCountUnits_t,
    pub pktfilter: nvmlNvLinkUtilizationCountPktTypes_t,
}
#[test]
fn bindgen_test_layout_nvmlNvLinkUtilizationControl_st() {
    assert_eq!(::std::mem::size_of::<nvmlNvLinkUtilizationControl_st>() ,
               8usize , concat ! (
               "Size of: " , stringify ! ( nvmlNvLinkUtilizationControl_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlNvLinkUtilizationControl_st>() ,
                4usize , concat ! (
                "Alignment of " , stringify ! (
                nvmlNvLinkUtilizationControl_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlNvLinkUtilizationControl_st ) ) .
                units as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlNvLinkUtilizationControl_st ) , "::" , stringify ! ( units
                ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlNvLinkUtilizationControl_st ) ) .
                pktfilter as * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlNvLinkUtilizationControl_st ) , "::" , stringify ! (
                pktfilter ) ));
}
impl Clone for nvmlNvLinkUtilizationControl_st {
    fn clone(&self) -> Self { *self }
}
